== Changelog ==

= 0.5.3 =
* Enhanced: field types now accept any kind of data attributes
* Fixed: posts and terms dropdown options now properly handle an empty value
* Fixed: textarea field will render as a text field inside a repeatable

= 0.5.2 =
* Fixed: fatal error in WYSIWYG field

= 0.5.1 =
* Fixed: license

= 0.5.0 =
* First stable version