@@ -4,6 +4,7 @@
 * Enhanced: field types now accept any kind of data attributes
 * Fixed: posts and terms dropdown options now properly handle an empty value
 * Fixed: textarea field will render as a text field inside a repeatable
+* Fixed: media mime type validation now properly handles file extensions, MIME types and WP media types
 
 = 0.5.2 =
 * Fixed: fatal error in WYSIWYG field
